ajustes no z-index e bugs com o lightbox

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -10,14 +10,16 @@
     background-color: rgba(0, 0, 0, 0.5);
     height: 100vh;
     width: 100vw;
+
+    z-index: 20;
 }
 
 .lightbox {
     display: inline-block;
     position: fixed;
-    margin: 5rem;
+    margin: 0 5rem;
     width: 30%;
-    max-width: 500px;
+    max-width: 700px;
 }
 .botao-fechar {
     margin-left: auto;
@@ -43,7 +45,8 @@
 
 .lightbox__content > .imagens-secundarias-lightbox {
     display: flex;
-    padding: 0 .5rem;
+    margin-top: .5rem;
+    padding: 0 2rem;
 }
 .lightbox__content > .imagens-secundarias-lightbox > img {
     margin: 0 .5rem;
